package passport;

message AuthRequest {
	optional string application = 1;
	required string password = 2;
	optional string email = 3;
	optional string phone = 4;
	optional string usernmae = 5;
}

message AuthResponse {
	required string token = 1;
}

message Login {

	optional string id = 1;

	optional string email = 2;
	optional string phone = 3;
	required string password = 4;

	message Location {
    		required double lon = 1;
    		required double lat = 2;
    	}

	optional Location location = 5;

	optional string username = 6;
}
